[gd_scene load_steps=3 format=3 uid="uid://cwasakcao8et1"]

[ext_resource type="Script" uid="uid://dgh7sv6nu6ab3" path="res://scripts/inventoryUI.gd" id="1_tahbm"]
[ext_resource type="PackedScene" uid="uid://bj8snh4cnrls6" path="res://scenes/item_slot.tscn" id="2_ylkvr"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tahbm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23392546, 0.23392546, 0.23392543, 1)

[node name="Title" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_right = 71.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Title - Inventory UI"
horizontal_alignment = 1

[node name="Selection Highlighter" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_right = 85.0
offset_bottom = 85.0
color = Color(0, 0, 1, 0.49019608)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 13
columns = 8

[node name="ItemSlot" parent="ColorRect/MarginContainer/GridContainer" instance=ExtResource("2_ylkvr")]
layout_mode = 2

[node name="Exit Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_bottom = 22.0
grow_horizontal = 0
theme_override_constants/line_spacing = -7
theme_override_font_sizes/font_size = 10
text = "Exit"

[node name="Choose Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Choose..."

[connection signal="pressed" from="ColorRect/Exit Button" to="." method="_onExitButtonPressed"]
[connection signal="pressed" from="ColorRect/Choose Button" to="." method="_onChooseButtonPressed"]
